# Alive

./: .gitignore  LICENSE  README.md  deliverables.md  fe.json  render.yaml
ai-seeder/: .env.example  abi.py  config.py  dna_generator.py  market_scanner.py  requirements.txt  seeder.py  submitter.py
contracts/: README.md  foundry.toml
contracts/cache/: solidity-files-cache.json  test-failures
contracts/script/: Deploy.s.sol  DeployProduction.s.sol  Deposit.s.sol  SpawnCreatures.s.sol
contracts/src/: Creature.sol  CreatureFactory.sol  Ecosystem.sol  EvolutionEngine.sol  GenePool.sol
contracts/src/interfaces/: ICreature.sol  IEvolutionEngine.sol  IPolkadotXcm.sol  IXCM.sol
contracts/src/xcm/: ScaleCodec.sol  XCMMessageBuilder.sol  XCMRouter.sol
contracts/test/: ALIVE.t.sol  Evolution.t.sol  XCMRouter.t.sol
contracts/test/mocks/: MockEvolutionEngine.sol  MockStablecoin.sol  MockXCM.sol
deployments/: local.json
docs/: ARCHITECTURE.md
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChainSync.tsx  CreatureInspector.tsx  DepositPanel.tsx  EcosystemCanvas.tsx  EpochControls.tsx  EpochTimeline.tsx  Footer.tsx  Header.tsx  InspectorWrapper.tsx  Leaderboard.tsx  StatsBar.tsx  Web3Provider.tsx
frontend/src/hooks/: useContracts.ts
frontend/src/lib/: mock-data.ts  types.ts
keeper/: epoch-keeper.sh  keeper.py  requirements.txt
pvm/: Cargo.toml
pvm/src/: crossover.rs  fitness.rs  lib.rs  mutation.rs  types.rs
scripts/: deploy.sh  epoch-runner.sh  epoch.sh  seed.sh
(+8 files in other folders)
